--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,13 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    gap: 24px;
+}
+.gallery-item {
+  flex-basis: calc((100% - 24px) / 4);
+}
